Enhance docker registry support, more generic, allow for branch repos
Replaces quay.io API integration with a generic docker registry
implementation, utilizing the GET repo/tags/list and HEAD
repo/manifests/tag methods in the standard v2 registry API.

Adds explicit support for AWS ECR which does not support the tags/list
API call and uses time-sensitive auth credentials.

Separates docker repositories by branch, appending the branch delimiter
(defaults to "-") and branch name for branches other than master.

Expects docker image tags of the form `unix timestamp-7 char git sha`,
parses these into the actual timestamp and revision (falls back to
leaving these fields blank).
- timestamps are not part of the standard registry API

Removes size information from docker images.
- not part of standard registry API, also inaccurate

--- a/public/src/less/styles.less
+++ b/public/src/less/styles.less
@@ -112,10 +112,13 @@ nav.navbar {
 .table {
 
     [data-column=tag] {
-        width: 90px;
+        width: 180px;
     }
     [data-column=branch] {
-        width: 100px;
+        width: 120px;
+    }
+    [data-column=revision] {
+        width: 90px;
     }
     [data-column=replicas] {
         width: 100px;
