Add preliminary environment management
Add a Create Environment prompt in the environments dropdown.
Add an "X" delete icon to each environment in the same dropdown.
Disallow deleting explicitly-defined environments in the API.

--- a/public/src/less/styles.less
+++ b/public/src/less/styles.less
@@ -93,6 +93,13 @@ nav.navbar {
     }
 }
 
+.remove-item {
+   color: '#000000';
+   top: 6px;
+   right: 15px;
+   position: absolute;
+}
+
 .view-header {
     position: relative;
     padding-top: 15px;
